Completes tutorial with adding all photos from Flickr; dismisses photos with double tap gestures

--- a/PixelCity/Base.lproj/Main.storyboard
+++ b/PixelCity/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" zoomEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsUserLocation="YES" showsCompass="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bZU-g1-TGE">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="851"/>
                                 <standardMapConfiguration key="preferredConfiguration"/>
                             </mapView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3nd-xD-EnZ">
@@ -42,11 +42,18 @@
                                     <constraint firstItem="0Z4-Jq-9CX" firstAttribute="centerX" secondItem="3nd-xD-EnZ" secondAttribute="centerX" id="obL-yc-5YV"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2T8-ed-3rZ">
-                                <rect key="frame" x="327" y="768" width="50" height="50"/>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R6W-QO-797">
+                                <rect key="frame" x="0.0" y="859" width="393" height="1"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="oQS-jy-W8E"/>
-                                    <constraint firstAttribute="height" constant="50" id="tVT-kB-OBd"/>
+                                    <constraint firstAttribute="height" constant="1" id="EP1-Uk-Ju4"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2T8-ed-3rZ">
+                                <rect key="frame" x="327" y="771" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Z6Z-2c-4Wj"/>
+                                    <constraint firstAttribute="height" constant="50" id="gIK-3e-KCn"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="locationButton"/>
@@ -54,36 +61,86 @@
                                     <action selector="locationPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="plt-kY-wul"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R6W-QO-797">
-                                <rect key="frame" x="0.0" y="854" width="393" height="0.0"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="bZU-g1-TGE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="0Rf-jJ-wtr"/>
-                            <constraint firstItem="2T8-ed-3rZ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="0qp-Qu-FLx"/>
-                            <constraint firstAttribute="bottom" secondItem="R6W-QO-797" secondAttribute="bottom" id="2kx-Fh-Roy"/>
+                            <constraint firstItem="R6W-QO-797" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="37x-9m-DjV"/>
                             <constraint firstItem="bZU-g1-TGE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5nO-Fh-tQE"/>
+                            <constraint firstItem="bZU-g1-TGE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ble-3L-o6n"/>
                             <constraint firstAttribute="trailing" secondItem="R6W-QO-797" secondAttribute="trailing" id="PUF-rD-2p0"/>
                             <constraint firstItem="R6W-QO-797" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Q14-6q-9cv"/>
                             <constraint firstItem="bZU-g1-TGE" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="S4C-LL-sX9"/>
+                            <constraint firstItem="R6W-QO-797" firstAttribute="top" secondItem="2T8-ed-3rZ" secondAttribute="bottom" constant="30" id="Uie-oM-E3B"/>
                             <constraint firstItem="3nd-xD-EnZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="X9u-lL-CF2"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2T8-ed-3rZ" secondAttribute="trailing" constant="16" id="Y6l-Zb-R6u"/>
-                            <constraint firstAttribute="bottom" secondItem="bZU-g1-TGE" secondAttribute="bottom" id="cTh-1b-LMe"/>
-                            <constraint firstItem="R6W-QO-797" firstAttribute="top" secondItem="bZU-g1-TGE" secondAttribute="bottom" id="he6-Ib-a2i"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2T8-ed-3rZ" secondAttribute="trailing" constant="16" id="bqq-ln-nEJ"/>
+                            <constraint firstItem="bZU-g1-TGE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="dgW-3I-ckR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="R6W-QO-797" secondAttribute="bottom" constant="-34" id="goc-OO-hqz"/>
                             <constraint firstItem="3nd-xD-EnZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hx7-jw-Unq"/>
                             <constraint firstItem="3nd-xD-EnZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="opx-WC-djU"/>
+                            <constraint firstItem="R6W-QO-797" firstAttribute="top" secondItem="bZU-g1-TGE" secondAttribute="bottom" id="yKu-7r-oFu"/>
+                            <constraint firstItem="bZU-g1-TGE" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="zmr-ih-6PV"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="mapView" destination="bZU-g1-TGE" id="ut1-gm-M9q"/>
+                        <outlet property="mapViewBottomHeightConstraint" destination="EP1-Uk-Ju4" id="G2O-ip-7AL"/>
+                        <outlet property="pullUpView" destination="R6W-QO-797" id="Cim-op-hFS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="64.885496183206101" y="-34.507042253521128"/>
+        </scene>
+        <!--Pop View Controller-->
+        <scene sceneID="dYx-pF-b2y">
+            <objects>
+                <viewController storyboardIdentifier="PopViewController" id="hlq-R4-Npr" customClass="PopViewController" customModule="PixelCity" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3g8-Ff-KrO">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WDa-u5-YMw">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EWM-Nm-hzw">
+                                <rect key="frame" x="96.666666666666686" y="773" width="200" height="25"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Double tap to dismiss" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edP-5m-0Eh">
+                                        <rect key="frame" x="14.333333333333329" y="1" width="171" height="23.333333333333332"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="3vL-GC-CDl"/>
+                                    <constraint firstItem="edP-5m-0Eh" firstAttribute="centerX" secondItem="EWM-Nm-hzw" secondAttribute="centerX" id="JkD-1O-bPf"/>
+                                    <constraint firstAttribute="height" constant="25" id="ZNC-WQ-Qci"/>
+                                    <constraint firstItem="edP-5m-0Eh" firstAttribute="centerY" secondItem="EWM-Nm-hzw" secondAttribute="centerY" id="fdY-mL-a6w"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="kP3-mb-ZXr"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="WDa-u5-YMw" firstAttribute="bottom" secondItem="kP3-mb-ZXr" secondAttribute="bottom" id="70r-3p-tLe"/>
+                            <constraint firstItem="EWM-Nm-hzw" firstAttribute="centerX" secondItem="3g8-Ff-KrO" secondAttribute="centerX" id="BQk-KV-i3L"/>
+                            <constraint firstItem="WDa-u5-YMw" firstAttribute="trailing" secondItem="kP3-mb-ZXr" secondAttribute="trailing" id="IEb-Xt-APB"/>
+                            <constraint firstItem="kP3-mb-ZXr" firstAttribute="bottom" secondItem="EWM-Nm-hzw" secondAttribute="bottom" constant="20" id="kbf-9P-YSH"/>
+                            <constraint firstItem="WDa-u5-YMw" firstAttribute="leading" secondItem="kP3-mb-ZXr" secondAttribute="leading" id="obq-6H-XCb"/>
+                            <constraint firstItem="WDa-u5-YMw" firstAttribute="top" secondItem="kP3-mb-ZXr" secondAttribute="top" id="r39-GZ-wkQ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="popImageView" destination="WDa-u5-YMw" id="idJ-yI-rTS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fno-To-DZK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="820.61068702290072" y="-34.507042253521128"/>
         </scene>
     </scenes>
     <resources>
